Fixed an issue where the format switcher text would disappear when clicked on Safari.

--- a/src/sass/components/_format_changer.scss
+++ b/src/sass/components/_format_changer.scss
@@ -16,7 +16,9 @@
         }
 
         &:hover,
+        &:focus,
         &.active {
+            color: $dark;
             font-weight: bold;
             opacity: 1;
         }
